<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<ImageView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:src="@drawable/images"
    android:scaleType="centerCrop"/>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/header"
                android:textAlignment="center"
                android:textSize="22sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dp"
                android:text="What is the capital of France?"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/question_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:keyboardNavigationCluster="true"
                android:layout_marginLeft="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dp"
                android:text="@string/question_2"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/question_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="0dp"
                android:text="@string/checkbox_Nose" />

            <CheckBox
                android:id="@+id/question_2_B"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="0dp"
                android:text="@string/checkbox_tongue" />

            <CheckBox
                android:id="@+id/question_2_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="0dp"
                android:text="@string/checkbox_ears" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dp"
                android:text="@string/question_3"
                android:textSize="16sp" />

            <RadioGroup
                android:id="@+id/question_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/question_3a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/radio_Madrid" />

                <RadioButton
                    android:id="@+id/question_3b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/radio_Barcelona" />

                <RadioButton
                    android:id="@+id/question_3c"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/radio_catalona" />

            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dp"
                android:text="@string/question4"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/question_4a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="0dp"
                android:text="@string/answer_1" />

            <CheckBox
                android:id="@+id/question_4b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="0dp"
                android:text="@string/answer_2" />

            <CheckBox
                android:id="@+id/question_4c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="0dp"
                android:text="@string/answer_3" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dp"
                android:text="@string/question5"
                android:textSize="16sp" />

            <RadioGroup
                android:id="@+id/radio_group_question_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/question_5a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/answer1" />

                <RadioButton
                    android:id="@+id/question_5b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/answer2" />

                <RadioButton
                    android:id="@+id/question_5c"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="22dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/answer3" />
            </RadioGroup>

            <Button
                android:id="@+id/evaluate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="22dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:onClick="startEvaluation"
                android:text="@string/evaluate_button" />

            <Button
                android:id="@+id/reset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:onClick="reset"
                android:text="@string/reset_button"
                android:textColor="#ff0033"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>

</RelativeLayout>